Fixed jumping on short pages with images

--- a/_scss/page/content.scss
+++ b/_scss/page/content.scss
@@ -2,7 +2,7 @@
     position: relative;
 
     max-width: 880px;
-    min-height: calc(100vh - #{$tabs-height-small} - 2rem);
+    min-height: calc(100vh - #{$tabs-height-small} - 1.5rem);
     margin: auto;
     padding: 2rem 1.5rem;
     padding-top: $tabs-height-small;
